--- a/src/app/main/pages/cashier/cashier.component.html
+++ b/src/app/main/pages/cashier/cashier.component.html
@@ -122,7 +122,14 @@
                         </div>
                     </ng-container>
                     <ng-template #emptyCart>
-                        Review Item masih kosong
+                        <div class="center">
+                            <div>
+                                <mat-icon svgIcon="empty-review"></mat-icon>
+                                <p class="text-center text-review">Belum ada review pesanan</p>
+                                <p class="text-center text-empty">Silahkan pilih pesanan terlebih dahulu</p>
+
+                            </div>
+                        </div>
                     </ng-template>
                 </div>
                 <!-- LIST ITEM -->
