--- a/src/app/main/pages/order/order.component.html
+++ b/src/app/main/pages/order/order.component.html
@@ -59,7 +59,7 @@
                 <div class="col-8 px-0">
 
                     <mat-card class="">
-                        <h1 class="title-card mb-1">Menu Satuan</h1>
+                        <h1 class="title-card mb-1">{{ get_title }}</h1>
                         <p class="subtitle-card mb-0">Berikut merupakan daftar menu satuan</p>
                         <mat-card-content class="mb-0">
 
