--- a/src/app/main/pages/cashier/cashier.component.css
+++ b/src/app/main/pages/cashier/cashier.component.css
@@ -154,6 +154,7 @@ input {
   flex: inherit;
   border: 1px solid #e5e5e5;
   box-shadow: 0px 0px 18px rgb(166 166 166 / 16%);
+  padding-bottom: 20px;
 }
 
 .header-box-half {
@@ -294,4 +295,44 @@ input {
   /* identical to box height */
   /* Neutral / 400 */
   color: var(--primary-200);
+}
+
+.center {
+  margin: auto;
+  width: 100%;
+  height: 86%;
+  padding: 44px;
+  overflow: hidden;
+  align-items: center;
+  display: flex;
+}
+
+.center .mat-icon {
+  width: 100%;
+  height: fit-content;
+}
+
+/* ::ng-deep .center .mat-icon > svg {
+  transform: scale(1);
+} */
+
+.text-review {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 25px;
+  /* identical to box height */
+  text-align: center;
+  /* Neutral / 400 */
+  color: #1e1e1e;
+  /* Inside auto layout */
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 0;
+  margin-bottom: 0;
+}
+
+.text-empty {
+  font-size: 12px;
 }
