--- a/src/app/main/pages/cashier/component/section-list-order/list-order.component.css
+++ b/src/app/main/pages/cashier/component/section-list-order/list-order.component.css
@@ -154,3 +154,32 @@ input:focus-visible {
   display: grid;
   gap: 10px;
 }
+
+.footer-selector {
+  position: fixed;
+  bottom: 10px;
+  width: inherit;
+  display: flex;
+  align-items: center;
+}
+
+.button-next-prev {
+  background: #045b62;
+  box-shadow: 0px 4px 20px rgb(0 0 0 / 5%);
+  border-radius: 4px;
+  gap: 10px;
+  height: 30px;
+  /* width: 100%;
+  height: 100%; */
+}
+
+.icon-next-prev {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 8px;
+}
+
+.icon-next-prev svg {
+  filter: invert(1);
+}
