--- a/src/app/main/pages/reservation/reservation-style/reservation.style.css
+++ b/src/app/main/pages/reservation/reservation-style/reservation.style.css
@@ -76,7 +76,7 @@ a {
 }
 
 .single {
-  padding: 39px 30px;
+  /* padding: 39px 30px;
   display: flex;
   flex-direction: row;
   background: white;
@@ -84,7 +84,21 @@ a {
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   align-items: center;
+  align-content: flex-start; */
+  margin: 10px 0px;
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  background: white;
+  align-items: center;
   align-content: flex-start;
+  /* Neutral/100 */
+  background: #ffffff;
+  /* Neutral / 200 */
+  border: 1px solid #e5e5e5;
+  /* Shadow1 */
+  box-shadow: 0px 0px 18px rgba(166, 166, 166, 0.16);
+  border-radius: 8px;
 }
 
 .single:last-child {
@@ -111,31 +125,6 @@ a {
   justify-content: flex-start;
   align-items: flex-start;
   align-content: flex-start;
-}
-
-.header {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  align-content: flex-start;
-}
-.header h3 {
-  font-size: 16px;
-  margin: 0 0 12px 0;
-}
-.header .desc {
-  height: 50px;
-  min-width: 420px;
-  will-change: height;
-  overflow: hidden;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-.header h5 {
-  font-size: 14px;
-  width: 80%;
-  line-height: 1.4;
-  font-weight: 300;
 }
 
 .functions {
@@ -168,13 +157,13 @@ a {
 }
 
 .cardTitle {
-  font-size: 13px;
+  font-size: 12px;
   letter-spacing: 2px;
-  text-transform: uppercase;
-  font-weight: 300;
-  color: #162d3d;
-  padding: 0 30px;
-  height: 72px;
+  /* text-transform: uppercase; */
+  font-weight: 800;
+  color: #1e1e1e;
+  padding: 10px 30px;
+  /* height: auto; */
   background: white;
   width: 100%;
   display: flex;
@@ -185,10 +174,6 @@ a {
   border-top-left-radius: 8px;
 }
 
-.soon {
-  color: #fb7d33 !important;
-}
-
 .claimed {
   background: #fafbfc;
 }
@@ -197,18 +182,38 @@ a {
 }
 
 .devider {
-  background: #f7f9fb;
+  background: #ffffff;
   width: 100%;
-  font-size: 10px;
-  font-weight: 400;
-  text-transform: uppercase;
-  letter-spacing: 1.4px;
   height: 36px;
   display: flex;
   align-items: center;
   padding: 0 30px;
+  font-size: 12px;
+  letter-spacing: 2px;
+  font-weight: 800;
+  color: #1e1e1e;
+  padding: 10px 30px;
 }
 
 .noBd {
   border: 0px solid black;
+}
+
+.icon-calendar-2 {
+  margin-right: 5px;
+  width: 18px;
+}
+
+.key-name {
+  font-size: 13px;
+  margin-right: 5px;
+}
+
+.value-in {
+  font-size: 13px;
+}
+
+.on-text-danger {
+  color: var(--error-color) !important;
+  font-weight: 800;
 }
